--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -107,6 +107,38 @@
         <h1>தமிழ்நாடு ஆளுநர்களின் பட்டியல்
         </h1>
         <table>
+            <script>
+                let table, table_ror_head, table_row,table_head1, tavle_head2, table_head3, table4, table_data1, table_data2, table_data3, table_data4;
+
+                table = document.createElement("table");
+
+                table_row_head= document.createElement("tr");
+                table.append(table_ror_head);
+
+                table_head1= document.createElement("th");
+                table_head1.innerText="fghjkl;";
+                table_ror_head.append(table_head1);
+
+                table_head2= document.createElement("th");
+                table_head2.innerText="dfghjkl;"
+                table_ror_head.append(table_head2);
+
+                table_head3= document.createElement("th");
+                table_head3.innerText="dfghjkl;"
+                table_ror_head.append(table_head3);
+
+                table_head3= document.createElement("th");
+                table_head3.innerText="dfghjkl;"
+                table_ror_head.append(table_head3);
+
+
+                table_row= document.createElement("tr");
+                table.append(table_row);
+
+                
+
+
+            </script>
             <tr>
                 <th>Sl.No</th>
                 <th>Governor</th>
