--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -64,9 +64,10 @@
       <div class="container-fluid">
 
 
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="" role="search">
+          <input class="form-control me-2" id="searchbar" type="search" placeholder="Search" aria-label="Search" />
+          <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+
         </form>
 
 
@@ -129,6 +130,8 @@
 
 
     </nav>
+    <ul id="search_result"></ul>
+
 
   </div>
 
@@ -136,7 +139,7 @@
   <!-- portfolio start -->
 
 
-  <div class="lists d-flex justify-content-center"><!-- this is line total container -->
+  <div class="lists d-flex justify-content-center" id="minister-list"><!-- this is line total container -->
 
     <!-- <div class="list1 d-flex flex-column justify-content-around align-items-center lh-base">
 
@@ -597,7 +600,7 @@
   </div>
   <!-- </div> -->
 
-  
+
 
   <!-- pie chart -->
 
@@ -605,7 +608,6 @@
     <img src="../../assets/images/piecharts/Education qualification of ministers.svg" class="img-fluid"
       alt="error image">
   </div>
-
   <!-- join table -->
 
   <div class="joinbox">
