--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -11,150 +11,101 @@
 
     <style>
         body {
-            padding: 0;
-            margin: 0;
-            font-family: 'Lato', sans-serif;
-            color: #000;
+            background: #100413;
         }
 
-        .student-profile .card {
-            border-radius: 10px;
+        .form-control:focus {
+            box-shadow: none;
+            border-color: #dcd8dc;
         }
 
-        .student-profile .card .card-header .profile_img {
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-            margin: 10px auto;
-            border: 10px solid #ccc;
-            border-radius: 50%;
+        input {
+            border-radius: 7px;
+            box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53);
+
         }
 
-        .student-profile .card h3 {
-            font-size: 20px;
-            font-weight: 700;
-        }
-
-        .student-profile .card p {
-            font-size: 16px;
-            color: #000;
-        }
-
-        .student-profile .table th,
-        .student-profile .table td {
-            font-size: 14px;
-            padding: 5px 10px;
-            color: #000;
-        }
-
-        .card-body table th {
-            width: 30%;
-        }
-
-        .card-body table th {
-            width: 2%;
+        .back:hover {
+            color: #682773;
+            cursor: pointer;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- Student Profile -->
-    <div class="student-profile py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card shadow-sm">
-                        <div class="card-header bg-transparent text-center">
-                            <img class="profile_img" src="../../assets/images/ministers/not-iamge.jpg" alt="">
-                            <h3>Profile</h3>
-                        </div>
-                        <div class="card-body">
-                            <div class="name d-flex">
-                                <span>name :</span>
-                                <p class="mb-0" id="first_name"></strong></p>
-                            </div>
-                            <div class="name d-flex">
-                                <span>Last_name :</span>
-                                <p class="mb-0" id="last_name"></p>
-                            </div>
-                            <div class="name d-flex">
-                                <span>mobile Number :</span>
-                                <p class="mb-0" id="mobile"></strong></p>
-                            </div>
-
-
-                        </div>
-                    </div>
+    <div class="container rounded bg-white mt-5">
+        <div class="row d-flex flex-column align-items-center justify-content-center">
+            <div class="col-md-4 border-right">
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
+                        src="https://lh6.googleusercontent.com/sixRDdVV_O-OdBsjyuwfD1WdcbedO8oFFUaw0AAShbFD6Ib2-1S2OWAvk1mNlqPApy8=w1200-h630-p"
+                        width="90">
+                    <span class="font-weight-bold"></span><span class="text-black-50">23456789</span><span>United
+                        States</span>
                 </div>
-                <div class="col-lg-8">
-                    <div class="card shadow-sm">
-                        <div class="card-header bg-transparent border-0">
-                            <h3 class="mb-0"></h3>User Information</h3>
-                        </div>
-                        <div class="card-body pt-0">
-                            <table class="table table-bordered">
-                                <caption>profile_page</caption>
-                                <tr>
-                                    <th scope="col">Gmail</th>
-                                    <td>:</td>
-                                    <td id="email"></td>
-                                </tr>
-                                <tr>
-                                    <th scope="col">Age </th>
-                                    <td>:</td>
-                                    <td><input type="text"></td>
-                                </tr>
-                                <tr>
-                                    <th scope="col">Gender</th>
-                                    <td>:</td>
-                                    <td><input type="text"></td>
-                                </tr>
-                                <tr>
-                                    <th scope="col">Address</th>
-                                    <td>:</td>
-                                    <td><input type="text"></td>
-                                </tr>
-                                <tr>
-                                    <th scope="col">State</th>
-                                    <td>:</td>
-                                    <td><input type="text"></td>
-                                </tr>
+            </div>
+            <div class="col-md-8">
+                <div class="p-3 py-5">
+                    <form action="" id="profile_user">
 
-                                <tr>
-                                    <td>
-                                        <button class="btn btn-outline-success" type="submit">Submit</button>
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <div class="d-flex flex-row align-items-center back"><i
+                                    class="fa fa-long-arrow-left mr-1 mb-1"></i>
 
-                                    </td>
-                                </tr>
-                            </table>
+                                <h6><a href="../home/home.html">Back to home</a></h6>
+                            </div>
+                            <button id="edit" class="text-right">Edit Profile</button>
                         </div>
-                    </div>
+                        <div class="row mt-2">
+                            <div class="col-md-6"><input type="text" class="form-control" id="first_name"
+                                    placeholder="first name" disabled></div>
+                            <div class="col-md-6"><input type="text" id="last_name" class="form-control" value="Doe"
+                                    placeholder="Doe" disabled>
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6"><input type="email" class="form-control" id="email"
+                                    placeholder="Email" disabled></div>
+                            <div class="col-md-6"><input type="text" id="mobile" class="form-control"
+                                    placeholder="Phone number" disabled></div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6"><input type="text" id="address" class="form-control"
+                                    placeholder="address" value="address" disabled></div>
+                            <div class="col-md-6"><input type="tel" id="pin_code" class="form-control"
+                                    placeholder="pincode" disabled>
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-md-6"><input type="text" id="city" class="form-control" placeholder="city"
+                                    value="" disabled></div>
+                            <div class="col-md-6"><input type="text" id="gender" class="form-control" value="male"
+                                    placeholder="gender" disabled></div>
+                        </div>
+                        <div class="d-flex flex-row justify-content-between">
+
+                            <div class="mt-5 text-right"><button id="save" class="btn btn-primary profile-button"
+                                    type="submit">Save
+                                    Profile</button></div>
+                            <div class="mt-5 text-right"><button id="delete" class="btn btn-primary profile-button"
+                                    type="submit">Delete Account</button>
+                            </div>
+                        </div>
+
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <script>
+    <script src="../../assets/javascript/user_profile.js">
 
-        let arrayvalue = JSON.parse(localStorage.getItem('users'));
-        console.log(arrayvalue);
-        let profile_check = localStorage.getItem("profile_email");
-        console.log(profile_check)
 
-        for (var i = 0; i < arrayvalue.length; i++) {
-            if (arrayvalue[i].email === profile_check) {
 
-                document.getElementById("first_name").innerText = arrayvalue[i].f_name;
-                document.getElementById("last_name").innerText = arrayvalue[i].l_name;
-                document.getElementById("mobile").innerText = arrayvalue[i].mobile;
-                document.getElementById("email").innerText = arrayvalue[i].email;
-                // document.getElementById("ditails").innerHTML ="";
-                // window.location.href="../home/home.html"
 
-                break;
-            }
-        }
+
+
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
