--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -77,9 +77,9 @@
                 
                 
                 <p class="contact"><a href="../your opinion/profilepage.html"><img src="../../assets/images/ministers/not-iamge.jpg" alt="icon"></a></p>
-                <p><a href="English-version/home/homepage-english.html">English</a></p>
+                <p><a href="../../English-version/home/homepage-english.html">English</a></p>
                 <p>|</p>
-                <p><a href="index.html">தமிழ்</a></p>
+                <p><a href="../home/home.html">தமிழ்</a></p>
 
 
             </div>
