--- a/pages/portfolio/profile/duraimurugan.html
+++ b/pages/portfolio/profile/duraimurugan.html
@@ -161,7 +161,7 @@
             <p><strong> பதவி: பொதுச்செயலாளர்</strong></p>
             <p><strong>பெயர்:</strong>துரைமுருகன்</p>
             <p><strong>NAME:</strong>Durai Murugan</p>
-            <p><strong>PARTY:</strong>திராவிட முன்னேற்றக் கழகம்</p>
+            <p><strong></strong>திராவிட முன்னேற்றக் கழகம்</p>
             <p><strong>அரசியல்:</strong>52 வருடம்</p>
             <p><strong>தொழில்</strong>வழக்குரைஞரும் <br>,அரசியல்</p>
 
