--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -13,7 +13,7 @@
     <title>politifact</title>
 
     <!-- <script src="assets/js/javascript.js"></script> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,15 +71,31 @@
 
             </div>
 
-            <div class="topic1">
+            <div class="topic1 d-flex align-items-center">
 
 
-                
-                
-                <p class="contact"><a href="../your opinion/profilepage.html"><img src="../../assets/images/ministers/not-iamge.jpg" alt="icon"></a></p>
-                <p><a href="../../English-version/home/homepage-english.html">English</a></p>
+
+
+                <p class="contact"><a href="../your opinion/profilepage.html"><i class="fa fa-users"></i></a></p>
+                <!-- <p><a href="../../English-version/home/homepage-english.html">English</a></p>
                 <p>|</p>
-                <p><a href="../home/home.html">தமிழ்</a></p>
+                <p><a href="../home/home.html">தமிழ்</a></p> -->
+                <p>
+                    <li class="nav-item dropdown pe-5">
+
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fa fa-globe"></i>
+                        </a>
+
+                        <ul class="dropdown-menu bg-light">
+                            <li><a class="dropdown-item"
+                                    href="../../English-version/home/homepage-english.html">English</a>
+                            </li>
+                            <li><a class="dropdown-item" href="../home/home.html">தமிழ்</a></li>
+                        </ul>
+                    </li>
+                </p>
 
 
             </div>
@@ -111,15 +127,18 @@
 
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-                        <li class="nav-item pe-5">
+                        <li class="nav-item pe-5 d-flex align-items-center">
+                            <i class="fa fa-home"></i>
                             <a class="nav-link active" aria-current="page" href="../home/home.html">முகப்பு</a>
                         </li>
 
-                        <li class="nav-item pe-5">
+                        <li class="nav-item pe-5 d-flex align-items-center">
+                            <i class="fa fa-address-card"></i>
                             <a class="nav-link" href="../portfolio/parties-profile.html">விவரம்</a>
                         </li>
 
-                        <li class="nav-item dropdown pe-5">
+                        <li class="nav-item dropdown pe-5 d-flex align-items-center">
+                            <i class="fa fa-file-audio-o"></i>
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 அறிக்கைகள்
@@ -130,11 +149,13 @@
                             </ul>
                         </li>
 
-                        <li class="nav-item pe-5">
+                        <li class="nav-item pe-5 d-flex align-items-center">
+                            <i class="fa fa-history"></i>
                             <a class="nav-link" href="../passt leaders/past leaders.html">தலைவர்கள்</a>
                         </li>
 
-                        <li class="nav-item dropdown pe-5">
+                        <li class="nav-item dropdown pe-5 d-flex align-items-center">
+                            <i class="fa fa-tasks"></i>
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 மேலும்
