--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -3461,6 +3461,7 @@
 
         </table>
     </div>
+    <script src="../../assets/javascript/mla_list.js"></script>
     <!-- footer  section-->
     <div class="footer">
 
