fix: delete bug fix

--- a/demo.html
+++ b/demo.html
@@ -51,7 +51,8 @@
 
         .card .multi-button button {
             left: 25%;
-            top: 25%;
+            top: 55%;
+            
         }
 
         .card .multi-button button:nth-child(1) {
@@ -89,7 +90,8 @@
             height: 10rem;
         }
 
-        body {
+        .card{
+            margin: 40px;
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
             grid-gap: 5rem;
