--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -3,16 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+
     <link href="../../assets/css/main.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="assets/css/responsive.css" type="text/css"> -->
+    
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
+
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+
     <title>politifact</title>
 
-    <!-- <script src="assets/js/javascript.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,17 +74,20 @@
 
             </div>
 
-            <div class="topic1 d-flex align-items-center">
+            <div class="topic1">
 
 
-
+                <p>
+                    <p class="contact"><a href="../admin/like_list.html"><i class="fa fa-heart"></i></a></p>
+                </p>
 
                 <p class="contact"><a href="../your opinion/profilepage.html"><i class="fa fa-users"></i></a></p>
                 <!-- <p><a href="../../English-version/home/homepage-english.html">English</a></p>
                 <p>|</p>
                 <p><a href="../home/home.html">தமிழ்</a></p> -->
                 <p>
-                    <li class="nav-item dropdown pe-5">
+
+                    <li class="nav-item dropdown pe-5 list-group-item">
 
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -95,7 +101,11 @@
                             <li><a class="dropdown-item" href="../home/home.html">தமிழ்</a></li>
                         </ul>
                     </li>
+
+
+
                 </p>
+               
 
 
             </div>
