--- a/pages/portfolio/stick.html
+++ b/pages/portfolio/stick.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>profile</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" /> -->
 
     <style>
@@ -189,11 +189,11 @@
             font-size: 45px;
             font-weight: 700;
         } */
-
+/* 
         .content p {
             font-size: 40px;
             font-weight: 700;
-        }
+        } */
     </style>
 
 
@@ -207,79 +207,6 @@
             <i class="fas fa-times"></i>
         </label> -->
         <nav id="sidebar">
-            <script>
-                let title, unorderList, list, list1img, list1, anchorlink1, list2, anchorlink2, list3, anchorlink3, link4, anchorlink4, link5, anchorlink5, link6, anchorlink6;
-
-                title= document.createElement("div");
-                title.setAttribute("class", "title");
-                title.innerText="side bar";
-                document.querySelector("#sidebar");
-
-                unorderList= document.createElement("ul");
-                unorderList.setAttribute("class", "list-items");
-
-                list= document.createElement("li");
-                unorderList.append(list);
-
-                list1img= document.createElement("img");
-                list1img.setAttribute("src", "assets/images/ministers/duraimurugan.jpg");
-                list1img.setAttribute("alt", "error image")
-                list.append(list1img);
-
-                list1= document.createElement("li");
-                unorderList.append(list1);
-
-                anchorlink1=document.createElement("a");
-                anchorlink1.setAttribute("href", "#")
-                anchorlink1.innerText="home";
-                list1.append(anchorlink1);
-
-                list2= document.createElement("li");
-                unorderList.append(list2);
-
-                anchorlink2=document.createElement("a");
-                anchorlink2.setAttribute("href", "#")
-                anchorlink2.innerText="home";
-                list2.append(anchorlink2);
-
-                list3= document.createElement("li");
-                unorderList.append(list3);
-
-                anchorlink3=document.createElement("a");
-                anchorlink3.setAttribute("href", "#")
-                anchorlink3.innerText="home";
-                list3.append(anchorlink3);
-
-
-                list4= document.createElement("li");
-                unorderList.append(list4);
-
-                anchorlink4=document.createElement("a");
-                anchorlink4.setAttribute("href", "#")
-                anchorlink4.innerText="home";
-                list4.append(anchorlink4);
-
-                list5= document.createElement("li");
-                unorderList.append(list5);
-
-                anchorlink5=document.createElement("a");
-                anchorlink5.setAttribute("href", "#")
-                anchorlink5.innerText="home";
-                list5.append(anchorlink5);
-
-                list6= document.createElement("li");
-                unorderList.append(list6);
-
-                anchorlink6=document.createElement("a");
-                anchorlink6.setAttribute("href", "#")
-                anchorlink6.innerText="home";
-                list6.append(anchorlink6);
-
-                document.querySelector("#sidebar").append(unorderList);
-
-
-
-            </script>
             <!-- <div class="title">
                 Side Menu
             </div>
@@ -295,7 +222,7 @@
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">About us</a></li>
-                <!-- <li><a href="#"><i class="fas fa-globe-asia"></i>Languages</a></li>
+                <!-<li><a href="#"><i class="fas fa-globe-asia"></i>Languages</a></li>
                 <li><a href="#"><i class="fas fa-envelope"></i>Contact us</a></li> -->
                 <div class="icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -303,7 +230,7 @@
                     <a href="#"><i class="fab fa-github"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
-            </ul> -->
+            </ul> 
         </nav>
     </div>
     <div class="content">
@@ -519,7 +446,7 @@
 
 
 
-    <script src="assets/javascript/profile.js">
+    <script src="../../assets/javascript/profile.js">
 
     </script>
 
