--- a/pages/admin/manifesto_listpage.html
+++ b/pages/admin/manifesto_listpage.html
@@ -12,7 +12,7 @@
 
         body {
             font-family: Lato;
-           background-color: #333333;
+            background-color: #333333;
         }
 
         p.title {
@@ -87,7 +87,135 @@
             color: #333333;
         }
 
-        /* accordion-2 */
+        /*form*/
+
+        body {
+            background-color: #DDF0FF;
+
+            color: #586791;
+        }
+
+     
+
+        h1 {
+            color: #55648E;
+            /* font-family: Lato; */
+            font-weight: 300;
+            text-align: center;
+            font-size: 35px;
+        }
+
+        input {
+            width: 100%;
+            /* font-family: tenso; */
+        }
+
+        select {
+            width: 50%;
+            font-family: tenso;
+            background-color: #586791;
+            letter-spacing: .04em;
+
+            padding: 10px 30px;
+            border-radius: 8px;
+            /* background: white; */
+            border: none;
+            -webkit-box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
+            -moz-box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
+            box-shadow: 2px 1px 39px 16px rgba(198, 225, 244, 0.86);
+
+
+        }
+
+      
+        option {
+            padding: 20px 30px;
+            font-family: tenso;
+        }
+
+        .dropdown {
+            margin: 40px 20px;
+        }
+
+
+        input {
+            margin: 10px 0 40px 0;
+            background: transparent;
+            border: none;
+            border-bottom: 1px solid #C2DCF3;
+            color: #ABC7E8;
+
+        }
+
+        input:focus {
+            border-bottom: 1px solid #596790;
+            outline: none;
+            color: #596790;
+        }
+
+        .submit {
+            border: none;
+            background-color: #ADCAE8;
+            color: #E4EDF7;
+            border-radius: 360px;
+            height: 50px;
+            transition: background 0.3s;
+            -webkit-transition: background 0.3s;
+        }
+
+
+        .close-what {
+            color: #586790;
+            font-size: 50px;
+            font-weight: 100;
+            text-align: right;
+            padding-right: 19px;
+            line-height: 69px;
+            border-radius: 360px;
+            height: 85px;
+            width: 85px;
+            background-color: #C8E6FE;
+            border-radius: 5px;
+            position: fixed;
+            top: 0;
+            right: 0;
+            border-radius: 0px 0px 0px 360px;
+        }
+
+        .close-what:hover {
+            color: white;
+            cursor: pointer;
+        }
+
+        .submit:hover {
+            background: white;
+            color: #5B6B93;
+            cursor: pointer;
+        }
+
+        .popup {
+      position: fixed;
+      z-index: 10;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 20%;
+    }
+
+    /* Popup content */
+    .popup-content {
+      background-color: #f9f9f9;
+      padding: 20px;
+      border-radius: 5px;
+    }
+
+    /* Close button */
+   
     </style>
 </head>
 
@@ -109,53 +237,190 @@
         </div> -->
 
     </div>
+    <div class="container popup" id="menifesto_popup" style="display: none;">
+        <h1>This is an Menifesto create page</h1>
+        <div class="popup-content">
+
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <form id="menifesto_form">
+                        Title of Menifesto:<br>
+                        <input type="text" id="menifest_title" placeholder="Title of Menifesto">
+                </div>
+                <div class="col-sm-6">
+                    stage of Menifesto:<br>
+                    <input type="text" id="status_stage" placeholder="the status of the stage">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    category:<br>
+                    <input type="text" id="catogery" style="color: black;" placeholder="catogery EX: agriculture">
+                </div>
+                <div class="col-sm-6">
+                    status:
+                    <select class="form-select" aria-label="Default select example" id="mainfesto-status">
+                        <option selected>Enter your opinion</option>
+                        <option value="complete">complte</option>
+                        <option value="bending">bending</option>
+                    </select><br><br><br><br><br>
+                </div>
+            </div>
+            <div class="row">
+                <!-- <div class="col-sm-6">
+                :<br>
+                <input type="text" name="firstname" value="New York"><br>
+            </div> -->
+                <div class="col-sm-6">
+                    <input type="submit" value="Submit" class="submit">
+
+                    </form>
+                </div>
+            </div>
+            <div class="close-what" id="closeBtn">&times;</div>
+
+        </div>
+    </div>
     <script>
-        // Create the accordion container element
-        const accordion = document.createElement('div');
-        accordion.setAttribute('id', 'accordion-1');
+        const popup = document.getElementById('menifesto_popup');
+        const closeBtn = document.getElementById('closeBtn');
 
-        // Create the head element
-        const head = document.createElement('div');
-        head.setAttribute('class', 'head');
+        closeBtn.addEventListener('click', function () {
 
-        // Create the h2 element
-        const h2 = document.createElement('h2');
-        h2.textContent = '1. Simple Accordion';
-        head.appendChild(h2);
-
-        // Create the arrow icon element
-        const arrow = document.createElement('i');
-        arrow.setAttribute('class', 'fas fa-angle-down arrow');
-        head.appendChild(arrow);
-
-        // Create the content element
-        const content = document.createElement('div');
-        content.setAttribute('class', 'content');
-        content.style.display = 'none'; // hide content by default
-        content.innerHTML = `
-  <p>An accordion is used to show and hide content. It can be usually a section.</p>
-  <button>complete</button>
-`;
-
-        // Append the head and content elements to the accordion
-        accordion.appendChild(head);
-        accordion.appendChild(content);
-
-        // Add the accordion to the document
-        document.querySelector(".container").append(accordion);
-
-        // Add click functionality to the accordion
-        head.addEventListener('click', function () {
-            if (content.style.display === 'none') {
-                content.style.display = 'block';
-                arrow.classList.remove('fa-angle-down');
-                arrow.classList.add('fa-angle-up');
-            } else {
-                content.style.display = 'none';
-                arrow.classList.remove('fa-angle-up');
-                arrow.classList.add('fa-angle-down');
-            }
+            popup.style.display = 'none'; // hide the form
         });
+
+        const manifesto = JSON.parse(localStorage.getItem("menifesto_data"));
+
+        for (const menifesto_value of manifesto) {
+
+
+            // Create the accordion container element
+            const accordion = document.createElement('div');
+            accordion.setAttribute('id', 'accordion-1');
+
+
+            // Create the head element
+            const head = document.createElement('div');
+            head.setAttribute('class', 'head');
+
+            // Create the h2 element
+            const h2 = document.createElement('h2');
+            h2.textContent = '1. Simple Accordion';
+            head.appendChild(h2);
+
+            // Create the arrow icon element
+            const arrow = document.createElement('i');
+            arrow.setAttribute('class', 'fas fa-angle-down arrow');
+            head.appendChild(arrow);
+
+            // Create the content element
+            const content = document.createElement('div');
+            content.setAttribute('class', 'content');
+            content.style.display = 'none'; // hide content by default
+            content.innerHTML = `
+             <p>An accordion is used to show and hide content. It can be usually a section.</p>
+             <button>complete</button>`;
+
+            const delete4 = document.createElement('i');
+            delete4.setAttribute('class', 'arrow');
+            delete4.innerHTML = "update"
+            delete4.onclick = function () {
+                popup.style.display = 'block';
+
+                updateMenifesto(menifesto_value);
+            }
+            content.appendChild(delete4);
+
+            // Append the head and content elements to the accordion
+            accordion.appendChild(head);
+            accordion.appendChild(content);
+
+            // Add the accordion to the document
+            document.querySelector(".container").append(accordion);
+
+            // Add click functionality to the accordion
+            head.addEventListener('click', function () {
+                if (content.style.display === 'none') {
+                    content.style.display = 'block';
+                    arrow.classList.remove('fa-angle-down');
+                    arrow.classList.add('fa-angle-up');
+                } else {
+                    content.style.display = 'none';
+                    arrow.classList.remove('fa-angle-up');
+                    arrow.classList.add('fa-angle-down');
+                }
+            });
+        }
+        let manifestoId = null;
+        const menifestoForm = document.getElementById("menifesto_form");
+
+        const manifesto_value = JSON.parse(localStorage.getItem("menifesto_data")) ?? [];
+
+        // Function to update leader data
+        function updateMenifesto(menifesto) {
+            // Set form values to current leader data
+            document.getElementById("menifest_title").value = menifesto.title;
+            document.getElementById("status_stage").value = menifesto.stage;
+            document.getElementById("catogery").value = menifesto.catogery;
+            document.getElementById("mainfesto-status").value = menifesto.status;
+            manifestoId = menifesto.id;
+            console.log(manifestoId);
+
+
+        }
+
+        // Function to handle form submission
+        function handleSubmit(e) {
+            e.preventDefault();
+            const title = document.getElementById("menifest_title").value;
+            const stage = document.getElementById("status_stage").value;
+            const category = document.getElementById("catogery").value;
+            const status = document.getElementById("mainfesto-status").value;
+            const time = new Date().getTime();
+            // const id=;
+            // console.log(id)
+
+            const menifesto = {
+                "title": title,
+                "stage": stage,
+                "catogery": category,
+                "status": status,
+                'time': time,
+                'delete': false,
+                'id': manifestoId,
+            };
+
+            // Find index of current leader in ministersData
+            const index = manifesto_value.findIndex((menifesto5) => menifesto5.id == manifestoId);
+
+            // If leader is found, update their data and save to localStorage
+            if (index !== -1) {
+                manifesto_value[index] = menifesto;
+                alert("menifesto updated successfully!");
+                localStorage.setItem("menifesto_data", JSON.stringify(manifesto_value));
+                window.location.reload();
+            }
+
+        }
+
+        // Add event listener to form submission
+        menifestoForm.addEventListener("submit", handleSubmit);
+
+        function deleteLeader(menifesto1) {
+            const menifesto_value = JSON.parse(localStorage.getItem("menifesto_data")) ?? [];
+
+            const index = menifesto_value.findIndex((manifesto) => manifesto.title === menifesto1.title);
+
+            // If leader is found, update their status to false and save to localStorage
+            if (index !== -1) {
+                ministersData[index].status = false;
+                localStorage.setItem("politician_data", JSON.stringify(ministersData));
+                alert("Leader status changed successfully!");
+                window.location.reload();
+            }
+        }
     </script>
 
 </body>
