--- a/pages/admin/profile_list_page.html
+++ b/pages/admin/profile_list_page.html
@@ -37,7 +37,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 6%;
+            margin-top: 0%;
         }
 
         /* Popup content */
@@ -92,6 +92,11 @@
         #leader-form input[type="submit"]:hover {
             background-color: #3e8e41;
         }
+
+        .horizontal-card-bg-img img{
+            width: 100%;
+            height: 100%;
+        }
     </style>
     <title>Document</title>
 </head>
@@ -123,6 +128,7 @@
 
                 <input type="submit" id="leader-submit" value="Submit">
                 <input id="closeBtn" type="button" value="close">
+                <!-- <div class="close-what" id="closeBtn">&times;</div> -->
 
             </form>
             <!-- <button id="closeBtn">Close</button> -->
@@ -146,47 +152,47 @@
 
         for (const minister of minister_list) {
 
-            const row = document.createElement("div");
+            let row = document.createElement("div");
             row.classList.add("row");
 
-            const col = document.createElement("div");
+            let col = document.createElement("div");
             col.classList.add("col-lg-12");
 
-            const card = document.createElement("div");
-            card.classList.add("card", "border-0", "mb-4", "mt-4");
+            let card = document.createElement("div");
+            card.classList.add("card", "border-4", "mb-4", "mt-4");
 
-            const dFlex = document.createElement("div");
+            let dFlex = document.createElement("div");
             dFlex.classList.add("d-flex");
 
-            const imgContainer = document.createElement("div");
+            let imgContainer = document.createElement("div");
             imgContainer.classList.add("horizontal-card-bg-img");
 
-            const img = document.createElement("img");
-            img.src = "anthing.com";
+            let img = document.createElement("img");
+            img.src = minister.img.sourse;
 
-            const flexFill = document.createElement("div");
+            let flexFill = document.createElement("div");
             flexFill.classList.add("flex-fill");
 
-            const cardBody = document.createElement("div");
+            let cardBody = document.createElement("div");
             cardBody.classList.add("card-body");
 
-            const title = document.createElement("div");
+            let title = document.createElement("div");
             title.classList.add("font-weight-bold", "mt-3");
             title.innerHTML = minister.name.ename;
 
-            const text = document.createElement("div");
+            let text = document.createElement("div");
             text.classList.add("mb-3");
             text.innerHTML = "<p>this text content i want to this card</p>";
 
-            const btnContainer = document.createElement("div");
+            let btnContainer = document.createElement("div");
             btnContainer.classList.add("horizontal-card-btn-container", "d-flex", "justify-content-center", "align-items-center");
 
-            const button1 = document.createElement("button");
-            button1.classList.add("btn-primary");
-            button1.innerHTML = "like";
+            // let button1 = document.createElement("button");
+            // button1.classList.add("btn-primary");
+            // button1.innerHTML = "like";
 
-            const button2 = document.createElement("button");
-            button2.classList.add("btn-primary");
+            let button2 = document.createElement("button");
+            button2.classList.add("btn-primary", "m-2");
             button2.innerHTML = "update";
             button2.onclick = function () {
                 updateLeader(minister);
@@ -194,7 +200,7 @@
                 popup.style.display = 'flex';
 
             }
-            const button3 = document.createElement("button");
+            let button3 = document.createElement("button");
             button3.classList.add("btn-primary");
             button3.innerHTML = "delete";
             button3.onclick = function () {
@@ -213,7 +219,7 @@
             cardBody.appendChild(title);
             cardBody.appendChild(text);
             dFlex.appendChild(btnContainer);
-            btnContainer.appendChild(button1);
+            // btnContainer.appendChild(button1);
             btnContainer.appendChild(button2);
             btnContainer.appendChild(button3);
             document.querySelector('.container').append(row);
@@ -227,11 +233,16 @@
         // Function to update leader data
         function updateLeader(leader) {
             // Set form values to current leader data
-            document.getElementById("url").value = leader.img.source;
+            document.getElementById("url").value = leader.img.sourse;
+
             document.getElementById("tname").value = leader.name.tname;
+
             document.getElementById("ename").value = leader.name.ename;
+
             document.getElementById("position").value = leader.position;
+
             document.getElementById("describe").value = leader.description;
+
             document.getElementById("party_name").value = leader.party_name;
         }
 
@@ -239,10 +250,15 @@
         function handleSubmit(e) {
             e.preventDefault();
             const img_url = document.getElementById("url").value;
+
             const tamil_name = document.getElementById("tname").value;
+
             const english_name = document.getElementById("ename").value;
+
             const position = document.getElementById("position").value;
+
             const description = document.getElementById("describe").value;
+
             const party_name = document.getElementById("party_name").value;
 
             const leaderdata = {
@@ -251,7 +267,7 @@
                     ename: english_name,
                 },
                 img: {
-                    source: img_url,
+                    sourse: img_url,
                     alter: english_name,
                 },
                 position: position,
