--- a/pages/portfolio/profile.html
+++ b/pages/portfolio/profile.html
@@ -337,7 +337,7 @@
         </div>
 
     </div>
-    <script src="../../../assets/javascript/profile.js"></script>
+    <script src="../../assets/javascript/profile.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
