--- a/pages/your opinion/profilepage.html
+++ b/pages/your opinion/profilepage.html
@@ -70,10 +70,10 @@
                                     placeholder="Phone number" disabled minlength="10" maxlength="10"></div>
                         </div>
                         <div class="row mt-3">
-                            <div class="col-md-6"><input type="text" id="address" class="form-control"
-                                    placeholder="address" value="address" disabled></div>
-                            <div class="col-md-6"><input type="tel" maxlength="6" id="pin_code" class="form-control"
-                                    placeholder="pincode" disabled>
+                            <div class="col-md-6"><input type="text" id="age" class="form-control"
+                                    placeholder="age" value="address" disabled></div>
+                            <div class="col-md-6"><input type="tel" maxlength="6" id="occupation" class="form-control"
+                                    placeholder="occupation" disabled>
                             </div>
                         </div>
                         <div class="row mt-3">
